--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.divbig {
+    width: 400px;
+    height: 400px;
+    /* border: ; */
+    padding: 15px, 10px, 15px, 10px;
+    background: white;
+    border-radius: 15px;
+    overflow: hidden;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    border: 1px solid red;
+    margin: auto;
+    margin-top: 30px;
+    text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.divsmall {
+    width: 300px;
+    height: 350px;
+    background: #FAFCFE;
+    border: 1px solid green;
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+    /* text-align: center; */
+    color: #010102;
+    font-size: 30px;
+    font-family: Mulish;
+    font-weight: 700;
+    word-wrap: break-word;
+    /* margin: 80px; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p {
+    color: #011432;
+    font-size: 15px;
+    font-family: Mulish;
+    font-weight: 600;
+    word-wrap: break-word;
+    /* text-align: center; */
+    margin: auto;
+    margin-top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+    background: #002347;
+    color: #FAFCFE;
+    font-size: 27px;
+    font-family: Mulish;
+    font-weight: 700;
+    word-wrap: break-word;
+    margin-top: 30px;
+   
 }
