--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,63 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+.bigdiv{
+  width: 350px;
+  height: 400px;
+  background-color: #FAFCFE;
+  border-radius: 30px;
+  border: 1px #8E8E8E solid;
+  margin: auto;
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-around;
+}
+.smalldiv{
+  width: 300px;
+  height: 300px;
+  position: relative;
+  text-align: center;
+}
+.time{
+  margin-left: 280px;
+  color: #4460EF;
+  margin-top: 15px;
+}
+.h1{
+  margin-top: 20px;
+  color: #011432;
+  font-family: Mulish;
+  font-weight: 700;
+  word-wrap: break-word
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.icon{
+  width: 206.51px; 
+  height: 206.51px; 
+  left: 90.91px; 
+  top: 34.58px; 
+  position: absolute; 
+  background: #3DD9EB;
+}
+
+h5{
+color: #011432;
+font-size: 9px;
+font-family: Mulish;
+font-weight: 600;
+line-height: 30px;
+word-wrap: break-word
+}
+
+.btn{
+color: #FAFCFE;
+font-size: 27px;
+font-family: Mulish;
+font-weight: 700;
+word-wrap: break-word;
+background: #002347;
+/* transform: rotate(135deg); 
+transform-origin: 5 5; */
 }
